# hector-ts

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: references_manual.bib
examples/: README.md
examples/ex1/: estimatespectrum.out  estimatetrend.ctl  example1_jupyter.ipynb  modelspectrum.out
examples/ex2/: README.md  cascais.mom  cascais_out.mom  estimatespectrum.ctl  hadslp2_cascais.mom
examples/ex3/: README.md  estimatetrend.ctl  estimatetrend.json  removeoutliers.ctl  removeoutliers.json
examples/ex4/: README.md  estimatetrend.ctl  estimatetrend.json
examples/ex5/: README.md  estimatespectrum.out  estimatetrend.json  findoffsets.json  modelspectrum.out  removeoutliers.ctl  removeoutliers.json
examples/ex6/: BOR1.tenv  GRAZ.tenv  METS.tenv  ONSA.tenv  README.md  ZIMM.tenv  convert_tenv2netcdf.py
examples/ex7/: estimatespectrum.ctl  estimatetrend.ctl
examples/ex8/: toeplitz_factorisation.ipynb
src/hector/: _epoch_scan_gaps.pyx  _epoch_scan_nogap.pyx  _gap_correction.pyx  _ggm.pyx  _levinson.pyx  _schur_gsa.pyx  ammargrag.py  ar1.py  arfima.py  control.py  convert_rlrdata2mom.py  convert_tenv2netcdf.py  covariance.py  datasnooping.py  date2mjd.py  designmatrix.py  estimate_all_trends.py  estimatespectrum.py  estimatetrend.py  find_all_offsets.py  findoffsets.py  fullcov.py  ggm.py  hector_examples.py  levinson.py  matern.py  mjd2date.py  mle.py  my_calendar.py  ncf.py  ncfdump.py  ncfgen.py  observations.py  ols.py  plot_ts.py  powerlaw.py  predicttrenderror.py  schur.py  (+6 more)
(+96 files in other folders)
